# google-workspace-mcp

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  accounts.example.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
commands/: google-workspace-setup.md
src/google_workspace_mcp/: __init__.py  accounts.py  auth.py  authorize.py  server.py
