[project]
name = "google-workspace-mcp"
version = "0.5.0"
description = "Multi-account Google Workspace MCP server (Gmail + Calendar + Drive + Tasks) for Claude Code"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth>=2.53.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "mcp>=1.27.2",
]

[project.scripts]
google-workspace-mcp = "google_workspace_mcp.server:main"
google-workspace-authorize = "google_workspace_mcp.authorize:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/google_workspace_mcp"]
